cmake_minimum_required(VERSION 3.17)
project(ppr)

set(CMAKE_CXX_STANDARD 20)

add_executable(ppr
        Cache.cpp
        CacheReader.cpp
        ClientSocketHandler.cpp
        HostSocketHandler.cpp
        HttpProxy.cpp
        main.cpp
        Poller.cpp
        ServerSocket.cpp
        TcpSocket.cpp)
